--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -815,7 +815,7 @@ For each grade have been applied the following approaches, in order to perform a
     \item Fairness through unawareness with proxy detection via apriori
     \item Fairness through unawareness with proxy detection via variables only
     \item Fairness through data rebalancing
-\end{enumerate}\\
+\end{enumerate}
 
 \section{Experiment setup}
 For each of the previous approaches have been chosen 3 models to perform the prediction:
