--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -44,7 +44,7 @@ Never too far down, to come back
 %----------------------------------------------------------------------------------------
 \tableofcontents   
 %\listoffigures     % (optional) comment if empty
-\lstlistoflistings % (optional) comment if empty
+%\lstlistoflistings % (optional) comment if empty
 %----------------------------------------------------------------------------------------
 
 \mainmatter
@@ -62,6 +62,8 @@ In recent years, artificial intelligence (AI) has undergone a remarkable evoluti
 In the realm of artificial intelligence, the issue of bias is a critical concern. AI systems are trained on historical data, and if this data carries biases related to gender, race, or other factors, the AI can inadvertently perpetuate and amplify these biases in its predictions or decisions. Addressing bias in AI necessitates a proactive approach, from carefully curating training data to developing algorithms that are designed to detect and mitigate bias. Furthermore, promoting diversity and inclusivity in the development teams is vital to ensuring that biases are recognized and addressed effectively.
 \paragraph{Fairness}
 Ensuring fairness in AI is an ongoing and essential goal. It involves designing and implementing AI systems in a way that does not discriminate against individuals or groups based on characteristics like race, gender, or socioeconomic status. Achieving fairness demands a multidimensional approach, including a clear definition of fairness metrics, active involvement of diverse stakeholders, and regular audits of AI systems to detect and rectify any unfair biases. Additionally, incorporating transparency and accountability into the AI development process is crucial for building trust and ensuring fair outcomes for all users.
+\paragraph{Machine Learning and data}
+! Machine learning algorithms heavily rely on data to make predictions and decisions. However, the quality and representativeness of the data used are critical factors, especially in the context of fairness. Biases and unfairness can be inadvertently ingrained in machine learning models if the training data is skewed or reflects historical biases present in society. The data source plays a pivotal role in fairness issues, as biases present in the data, whether due to societal, cultural, or historical factors, can perpetuate and reinforce discriminatory outcomes. If the training data disproportionately represents a certain group, the model may learn to favor that group, leading to biased predictions and decisions. It is imperative to carefully curate and preprocess data, strive for diversity and representativeness, and continually evaluate and mitigate biases to promote fairness and ensure equitable outcomes in machine learning applications.
 \paragraph{Fair-by-design method}
 Since the huge impact that AI systems are having on daily life and more in general on the whole socio-technical systems it becomes crucial to design new AI methods and model that take account of fairness since the design step. That's why we call them fair-by-design methods.
 %----------------------------------------------------------------------------------------
@@ -87,26 +89,44 @@ Bias in AI refers to the unfair and skewed representation or treatment of indivi
 
 \subsection{Sources of Bias}
 \begin{itemize}
-    \item \textbf{Historical data}: AI models are often trained on historical data, reflecting past societal biases and inequalities. If the data contains biased patterns, the AI system can learn and replicate those biases.
-    \item \textbf{Human bias}: The biases of the people involved in collecting, selecting, and labeling the data used for training AI models can seep into the algorithms.
-    \item \textbf{Algorithmic bias}: The algorithms themselves can inadvertently introduce or magnify biases due to their design, assumptions, or mathematical formulations.
+    \item \textbf{Historical data}: Bias arising from historical data is a significant concern in machine learning. When models are trained on historical data, they learn the patterns and biases inherent in that data. These historical biases, often reflective of societal prejudices and inequalities, can perpetuate and reinforce unfair outcomes when the model is deployed. For instance, if historical data contains biases against a particular demographic, such as gender or race, the model will learn and replicate these biases in its predictions or decisions. This perpetuation of historical biases through machine learning systems can lead to discriminatory practices, reinforcing existing inequalities and disadvantaging certain groups. Addressing bias from historical data requires careful consideration and proactive measures, including data preprocessing techniques to identify and mitigate bias, algorithmic fairness interventions, and ongoing monitoring and adjustment of models to ensure fairness and equitable treatment for all individuals, irrespective of their backgrounds. It's crucial to strive for a future where machine learning not only learns from historical data but also actively works to break free from the shackles of bias and promote a fair and just society.
+    \item \textbf{Human bias}: Bias introduced by human factors is a pervasive challenge in machine learning. Human bias, stemming from societal, cultural, or personal beliefs and attitudes, can inadvertently permeate the entire machine learning pipeline, from data collection and annotation to model training and decision-making. Human bias can manifest in various ways, such as the biased selection of training data, subjective annotations, or implicit prejudices when designing or evaluating algorithms. When humans are involved in the decision-making process or contribute to the development of algorithms, their biases can be unintentionally embedded in the model, leading to skewed predictions and reinforcing societal inequalities. Recognizing and mitigating human bias is crucial for developing fair machine learning models. This involves raising awareness, promoting diversity and inclusion, implementing bias detection and mitigation techniques, and continually refining algorithms to ensure that the impact of human bias is minimized, and the models contribute to a more equitable and unbiased society.
+    \item \textbf{Algorithmic bias}: Certainly! Algorithmic bias refers to the inherent biases that can be present in the design, development, and implementation of machine learning algorithms. These biases can inadvertently emerge due to a variety of factors, such as biased training data, skewed feature selection, or implicit assumptions made during algorithm development. Algorithmic bias can perpetuate and amplify existing societal prejudices and inequalities, leading to unfair and discriminatory outcomes. For example, if a model is trained on historical data that reflects societal biases, the algorithm can inadvertently learn and reinforce these biases, resulting in biased predictions and decisions. Detecting and mitigating algorithmic bias is of utmost importance in building fair and just AI systems. This involves careful scrutiny of the entire machine learning pipeline, addressing bias in training data, utilizing fairness-aware algorithms, and incorporating transparency and fairness into the decision-making process to ensure that the algorithms are equitable, unbiased, and promote fairness and equal treatment for all.
 \end{itemize}
 
 \subsection{Example of Bias in AI}
 \subsubsection{Race and Gender Bias in Facial Recognition}
-Facial recognition systems have shown significant biases in accurately identifying individuals based on race and gender. Studies have revealed that these systems are more accurate for lighter-skinned individuals, while misidentifying or underrepresenting people with darker skin tones, especially women.
+Race and gender bias in facial recognition technology is a pressing and concerning issue that highlights the ethical challenges associated with AI development. Facial recognition systems, often trained on large datasets, inadvertently perpetuate biases present in these datasets, particularly biases related to race and gender. The lack of diversity in training data, predominantly skewed towards certain demographics, results in algorithmic bias, where the system may struggle to accurately recognize individuals from underrepresented racial or gender groups. Studies have shown that these systems are often more accurate for individuals with lighter skin tones compared to those with darker skin tones, demonstrating a clear racial bias. Similarly, gender recognition algorithms may exhibit inaccuracies, especially for gender-nonconforming individuals, further exacerbating biases.
+
+These biases have far-reaching implications. Law enforcement agencies using facial recognition may disproportionately target and misidentify individuals from minority communities, leading to wrongful arrests or increased surveillance. In commercial applications, biased facial recognition can impact hiring processes, access to services, and overall societal fairness. Addressing these biases requires comprehensive strategies, including diversifying training data to be more representative, developing bias detection and mitigation techniques, promoting interdisciplinary research, and fostering discussions around the ethical implications of facial recognition technology. Additionally, regulatory frameworks and guidelines are essential to ensure that these technologies are deployed responsibly, with transparency, accountability, and fairness in mind, to mitigate the adverse effects of bias and foster a more equitable future.
 
 \subsubsection{Criminal Justice Bias}
-AI algorithms used in criminal justice for risk assessment and sentencing have been found to exhibit racial biases. These algorithms tend to overpredict the likelihood of reoffending for certain minority groups, leading to unfair and discriminatory outcomes.
+Criminal justice bias is a deeply ingrained issue within the legal system that manifests through unequal treatment of individuals based on their race, socioeconomic status, gender, and other factors. The criminal justice system should ideally operate on principles of fairness, justice, and equality before the law. However, biases at various stages of the criminal justice process, from policing and arrest to trial and sentencing, often lead to discriminatory outcomes.
+
+Racial bias is a significant concern, with people of color, especially Black individuals and communities, experiencing disproportionately higher rates of arrest, harsher sentencing, and a lack of trust in the system. Discriminatory practices such as racial profiling and racial disparities in sentencing contribute to this bias. Socioeconomic bias is another critical factor, where individuals from marginalized and low-income communities may face prejudice in the form of limited access to legal resources and unequal treatment within the legal process.
+
+Gender bias is prevalent, particularly against women and gender-diverse individuals. Women can face stereotypes and discriminatory attitudes that affect their treatment by law enforcement, the courts, and correctional facilities. Additionally, biases against LGBTQ+ individuals can result in unfair treatment and disparities in the criminal justice system.
+
+Addressing criminal justice bias necessitates comprehensive reform. This includes implementing policies to combat racial and socioeconomic disparities, providing anti-bias training to law enforcement, encouraging diversity within the legal profession, and promoting transparency and accountability in the criminal justice process. Legislation, sentencing reform, community engagement, and the support of marginalized communities are also vital steps toward achieving a fair and impartial criminal justice system that upholds the principles of equity and justice for all.
 
 \subsubsection{Recruitment Bias}
-AI algorithms used in recruitment processes have shown gender bias by favoring male candidates over equally or more qualified female candidates. This bias can perpetuate gender imbalances in the workplace.
+Recruitment bias is a critical issue within the hiring process, where unconscious or conscious prejudices and preconceived notions influence decision-making during candidate selection. It manifests in various forms, such as racial, gender, age, socio-economic, educational, or even appearance-based biases, and can significantly impact the composition of the workforce.
 
+One of the most prevalent forms of recruitment bias is racial or ethnic bias. Hiring decisions can be influenced by stereotypes, leading to the underrepresentation of certain racial or ethnic groups in the workplace. Similarly, gender bias can result in disparities in hiring and promotion opportunities, favoring one gender over another. Age bias often affects older candidates who may be overlooked in favor of younger, perceived to be more 'tech-savvy' individuals.
+
+Educational and socio-economic biases can also seep into the hiring process, where candidates from prestigious institutions or privileged backgrounds may be given preferential treatment. Appearance-based biases, although highly unfortunate, can influence decisions, impacting individuals based on their physical attributes, such as weight, height, or even hairstyle.
+
+Addressing recruitment bias requires a multipronged approach. Firstly, raising awareness and providing training on unconscious bias is essential for hiring teams. Implementing structured and standardized interview processes, blind recruitment techniques (removing personally identifiable information), and diverse interview panels can help mitigate biases. Moreover, organizations should focus on promoting diversity and inclusion, fostering a culture that values different perspectives and backgrounds, and monitoring and analyzing recruitment data to identify patterns of bias. Striving for fairness and inclusivity in the hiring process not only leads to a more diverse workforce but also improves organizational innovation, creativity, and overall success.
 \section{Fairness}
-Fairness in AI refers to the absence of discrimination or bias in the creation, deployment, and outcomes of AI systems. It's about treating individuals fairly and equitably, irrespective of their gender, race, age, ethnicity, or any other characteristic. Achieving fairness in AI is fundamental to building trust and ensuring that AI benefits all members of society. \\
-Unfair AI can perpetuate and amplify existing societal inequalities, reinforcing stereotypes and excluding certain groups. Inaccurate credit scoring, biased hiring practices, and unfair sentencing are just a few examples of how unfair AI systems can have real and damaging consequences. \\
-To build AI systems that are fair and just, interdisciplinary collaboration and a commitment to inclusivity are essential. Developers, policymakers, and communities must work together to identify, understand, and rectify biases and disparities in AI. By embedding fairness as a core principle in AI development, we can create a future where AI benefits all, contributing to a more equitable society. \\
+Fairness in AI systems is a crucial and evolving area of focus within the realm of artificial intelligence. It revolves around the ethical and moral obligation to ensure that AI technologies and algorithms treat all individuals equitably and without bias or discrimination. As AI becomes increasingly integrated into various aspects of society, including decision-making processes, job recruitment, lending, and law enforcement, the importance of fairness cannot be overstated.
 
+The concept of fairness in AI encompasses a range of factors, including the avoidance of bias based on attributes like race, gender, age, ethnicity, and socio-economic status. Bias in AI can manifest in various forms, often stemming from biased training data or inherent biases present in the algorithms themselves. Fair AI systems strive to minimize such biases to provide impartial and just outcomes for everyone involved.
+
+Different types of fairness metrics and criteria have been proposed to assess and quantify fairness, such as disparate impact, equal opportunity, and demographic parity. Disparate impact evaluates the differential impact of an AI system on various demographic groups, while equal opportunity ensures that the probability of a positive outcome remains consistent across different groups. Demographic parity, on the other hand, focuses on proportional representation of groups in AI outcomes.
+
+Addressing fairness in AI involves employing various techniques, including pre-processing data to reduce biases, modifying algorithms to be fairness-aware, and implementing post-processing methods to ensure equitable outcomes. Moreover, transparency and explainability in AI models are vital to understanding and addressing potential biases and fostering trust in the technology.
+
+Ethical considerations are an essential aspect of fairness in AI. Ensuring fairness requires not only technical solutions but also stakeholder involvement, diverse perspectives, and adherence to guidelines and regulations that prioritize fairness and impartiality. In summary, the pursuit of fairness in AI systems is an ongoing journey, necessitating continuous research, collaboration, and ethical vigilance to create AI technologies that uphold the principles of fairness and contribute to a more inclusive and just society.
 \subsection{Fairness Techniques in AI}
 
 \subsubsection{Pre-processing:}
@@ -122,10 +142,30 @@ Implementing these techniques requires a deep understanding of the specific fair
 
 \subsection{Pre-processing Techniques for Addressing Fairness in AI}
 
-Pre-processing plays a vital role in mitigating fairness issues within AI systems by preparing the data before it is utilized to train a model. The objective is to ensure that the data is unbiased, representative, and equitable across different demographic groups. Various techniques can be employed during pre-processing to promote fairness:
+Pre-processing techniques in AI systems are a critical component of the machine learning pipeline, laying the foundation for robust and accurate model training. Pre-processing involves preparing and cleaning the raw data to ensure it is suitable for feeding into machine learning algorithms. This step is essential as the quality of input data significantly impacts the performance and effectiveness of the AI system.
+
+The pre-processing phase encompasses a variety of operations, including data cleaning, data transformation, feature selection, and feature engineering. Data cleaning involves handling missing or erroneous data, removing duplicates, and addressing inconsistencies. Data transformation includes normalization and scaling, ensuring that features are on a consistent scale to prevent biases in model training. Feature selection involves identifying and selecting the most relevant features for the model, reducing complexity and improving efficiency. Feature engineering involves creating new features or modifying existing ones to enhance the model's ability to capture patterns and make accurate predictions.
+
+Additionally, pre-processing techniques are crucial for handling imbalanced data, where one class significantly outnumbers the others. Techniques like oversampling, undersampling, or generating synthetic samples can help address this imbalance and improve model performance. Handling categorical data through techniques like one-hot encoding or label encoding is another vital pre-processing step to convert categorical variables into a format suitable for model training.
 
 \subsubsection{Oversampling and Undersampling}
-Oversampling involves increasing the representation of underrepresented groups in the dataset, while undersampling reduces the overrepresentation of certain groups. This rebalancing technique helps to achieve a more equal distribution of samples from different categories, addressing potential biases.
+Oversampling and undersampling are techniques used to address class imbalance, where one class significantly outnumbers the others in a dataset. In the context of fairness, these techniques are employed to ensure that the AI model is not biased towards the majority class and that the predictions are fair and equitable for all classes, particularly when sensitive attributes like race, gender, or ethnicity are involved.
+\begin{enumerate}
+    \item \textbf{Oversampling}
+
+    \begin{itemize}
+        \item \textbf{Definition:} Oversampling involves increasing the number of instances in the minority class by generating synthetic samples or replicating existing ones.
+        \item \textbf{Fairness Context:} Oversampling aims to boost the representation of underrepresented groups, promoting fairness and equal consideration of all groups. It prevents the model from exhibiting bias towards the majority group.
+    \end{itemize}
+
+    \item \textbf{Undersampling}
+
+    \begin{itemize}
+        \item \textbf{Definition:} Undersampling involves reducing the number of instances in the majority class by removing samples, ideally in a strategic and unbiased manner.
+        \item \textbf{Fairness Context:} Undersampling can be employed to level the playing field by reducing the dominance of the majority group. This ensures that the model's predictions are not disproportionately influenced by the majority group, promoting fairness in the model's outcomes.
+    \end{itemize}
+    
+\end{enumerate}
 
 \textbf{Example:} In a credit approval scenario, if a particular group is underrepresented in the dataset, oversampling can be employed to create synthetic instances for that group, ensuring fair credit evaluations.
 
@@ -463,7 +503,8 @@ Here's the pseudocode of proxy\textunderscore detection function. There are 2 sc
     \KwRet{proxy\_list}
 \end{algorithm}
 
-    \item \textbf{Apriori}
+    \item \textbf{Apriori}:
+
     \begin{algorithm}[H]
     \KwData{apriori\_dataset}
     \KwResult{List of proxies}
