feat: doc partially completed

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -164,23 +164,41 @@ Oversampling and undersampling are techniques used to address class imbalance, w
         \item \textbf{Definition:} Undersampling involves reducing the number of instances in the majority class by removing samples, ideally in a strategic and unbiased manner.
         \item \textbf{Fairness Context:} Undersampling can be employed to level the playing field by reducing the dominance of the majority group. This ensures that the model's predictions are not disproportionately influenced by the majority group, promoting fairness in the model's outcomes.
     \end{itemize}
-    
+
 \end{enumerate}
 
 \textbf{Example:} In a credit approval scenario, if a particular group is underrepresented in the dataset, oversampling can be employed to create synthetic instances for that group, ensuring fair credit evaluations.
 
+%%%% CONTINUE FROM HERE
 \subsubsection{Noise Removal}
-Identifying and removing noise or irrelevant data from the dataset is crucial to improve the quality of the training data. Noise may introduce biases or distortions in the model, and cleaning the data helps ensure a fair and accurate representation of each group.
+Noise removal in the context of fairness typically refers to the process of identifying and mitigating the effects of noisy or incorrect data points that may introduce biases or distortions in the data used to train or evaluate machine learning models. In fairness considerations, noise removal plays a crucial role in ensuring that the AI system's predictions and decisions are as accurate and unbiased as possible, particularly when sensitive attributes like race, gender, or ethnicity are involved.
 
 \textbf{Example:} In sentiment analysis, if a dataset contains biased reviews based on certain demographics, such as gender, removing these biased reviews helps in training a fair sentiment analysis model.
 
 \subsubsection{Data Augmentation}
-Data augmentation techniques involve generating additional training samples by applying transformations (e.g., rotation, translation) to the existing data. This process helps to enhance the diversity and balance within the dataset, leading to a more equitable model.
-
+Data augmentation is a technique often used in machine learning and data preprocessing to artificially increase the size and diversity of a training dataset by generating new data points based on the existing ones. In the context of fairness, data augmentation can play a crucial role in addressing imbalances and biases in the data, particularly when sensitive attributes are involved. Here's how data augmentation can be applied in the context of fairness:
+\begin{enumerate}
+    \item \textbf{Generating Additional Data for Underrepresented Groups}
+    \begin{itemize}
+        \item In scenarios where certain groups or classes are underrepresented in the training data, data augmentation techniques can be used to create additional examples for those groups.
+    \end{itemize}
+    \item \textbf{Balancing Class or Group Representation}
+    \begin{itemize}
+        \item Data augmentation can be employed to balance class or group representation in the training data. By creating synthetic data points for underrepresented groups, it helps ensure that the model is not biased towards majority groups.
+    \end{itemize}
+    \item \textbf{Feature Engineering for Fairness}
+    \begin{itemize}
+        \item Data augmentation can also involve feature engineering that considers sensitive attributes. For example, it can create new features that better capture the nuances and characteristics of underrepresented groups.
+    \end{itemize}
+    \item \textbf{Fair Data Augmentation}
+    \begin{itemize}
+        \item In the fairness context, it's important to ensure that data augmentation techniques do not introduce additional biases. Care should be taken to create synthetic data that aligns with the fairness and equity goals of the AI system.
+    \end{itemize}
+\end{enumerate}
 \textbf{Example:} In image recognition, augmenting images by rotating or flipping them can provide a more balanced representation of different features, promoting fairness in the model's predictions.
 
 \subsubsection{Bias Mitigation Algorithms}
-Specialized algorithms can be applied to preprocess the data and reduce biases. These algorithms aim to adjust the dataset to ensure that the model is not unfairly influenced by specific attributes, such as gender or race. Techniques like re-weighting or re-sampling can be used to achieve a fairer representation.
+Bias mitigation in the context of fairness refers to the process of identifying, reducing, or eliminating biases within machine learning models and algorithms, particularly those that could lead to unfair or discriminatory outcomes, often associated with sensitive attributes like race, gender, age, or ethnicity. The goal of bias mitigation is to ensure that AI systems provide equitable and unbiased predictions and decisions for all individuals or groups.
 
 \textbf{Example:} When training a model for a hiring platform, using a bias mitigation algorithm to adjust the dataset to have an equal representation of genders can lead to a more fair hiring process.
 
@@ -189,10 +207,6 @@ In some cases, sensitive attributes (e.g., race, gender) can be removed from the
 
 \textbf{Example:} In a loan approval system, sensitive attributes like race can be neutralized by removing them or encoding them in a way that the model cannot identify them, ensuring unbiased loan decisions.
 
-\subsubsection{Synthetic Data Generation}
-Creating synthetic data that accurately represents underrepresented groups can help balance the dataset and improve fairness. This process involves generating new data points based on the existing information, particularly focusing on minority groups.
-
-\textbf{Example:} In healthcare AI, generating synthetic medical records for underrepresented medical conditions ensures that the AI system is trained fairly, considering all health conditions adequately.
 
 These pre-processing techniques are essential steps in the AI development pipeline to ensure that the subsequent models are fair, unbiased, and capable of providing equitable outcomes across various demographic categories.
 
@@ -201,32 +215,27 @@ These pre-processing techniques are essential steps in the AI development pipeli
 In-processing techniques aim to mitigate fairness issues directly during the model training phase, influencing the learning process to ensure fairness in model predictions. These approaches target bias reduction and fairness promotion within the model's decision-making process. Several techniques can be employed during model training to achieve fairness:
 
 \subsubsection{Regularization}
-Regularization is a common in-processing technique used to penalize the model for exhibiting biased behavior based on sensitive attributes. By adjusting the regularization terms in the model's training objective, we can discourage the model from relying heavily on such attributes.
+Regularization  aims to address and mitigate potential biases within models, particularly when sensitive attributes like race, gender, or ethnicity are involved. Regularization techniques work by adding constraints or penalties to the model's training process to reduce the impact of sensitive attributes on predictions and ensure that fairness is maintained.
 
 \textbf{Example:} In a hiring model, a regularization term can be added to the loss function to penalize the model for making biased predictions related to gender or ethnicity.
 
 \subsubsection{Reweighting Training Samples}
-This technique involves assigning different weights to training samples based on their sensitive attributes to balance the influence of different groups during training. It aims to ensure that the model learns equally from all demographic categories.
+Reweighting training samples is a technique used to address bias and promote fairness in machine learning models, particularly when sensitive attributes are involved. This approach involves assigning different weights to training samples to influence the learning process of the model in a way that mitigates bias and ensures that predictions are more equitable.
 
 \textbf{Example:} In a credit scoring model, training samples from underrepresented demographics can be assigned higher weights to ensure their impact on model training is more significant.
 
-\subsubsection{Adversarial Training}
-Adversarial training involves training a fairness-specific adversarial network alongside the primary model. The adversarial network aims to predict the sensitive attributes from the model's hidden representations, encouraging the primary model to generate features that are independent of these attributes.
-
-\textbf{Example:} In facial recognition, an adversarial network can be used to ensure that the model's features are not biased towards specific racial characteristics.
-
 \subsubsection{Prejudice Remover Regularizer}
-This technique involves adding a prejudice remover regularizer to the model's training process. The regularizer encourages the model to learn a fair representation by minimizing the correlation between the learned features and the sensitive attributes.
+The Prejudice Remover Regularizer is a technique used to mitigate bias and promote equitable outcomes in machine learning models. It's a form of regularization that aims to reduce discrimination by encouraging the model to make predictions that are less influenced by sensitive attributes such as race, gender, or ethnicity.
 
 \textbf{Example:} In a recommendation system, the prejudice remover regularizer can help ensure that recommendations are not influenced by the gender of the user.
 
 \subsubsection{Demographic Parity Loss}
-Demographic parity loss is a technique that incorporates fairness directly into the model's loss function. It ensures that the model's predictions are as similar as possible across different demographic groups.
+The Demographic Parity Loss is a fairness metric and regularization technique used to promote fairness and reduce bias, particularly with regard to sensitive attributes like race, gender, or ethnicity. It is designed to ensure that the predictions made by a model are distributed equally or fairly across different demographic groups.
 
 \textbf{Example:} In a loan approval system, the demographic parity loss can be added to the loss function to minimize disparities in approval rates between different ethnic groups.
 
 \subsubsection{Fair Adversarial Training}
-Fair adversarial training extends adversarial training to explicitly reduce disparate treatment among different demographic groups. It adds an adversarial component to the loss function to minimize the unfairness of the model's predictions.
+air adversarial training is a technique used in the context of fairness to reduce bias and discrimination in machine learning models, particularly when sensitive attributes like race, gender, or ethnicity are involved. This approach incorporates adversarial networks into the training process to promote fairness and equitable outcomes.
 
 \textbf{Example:} In a criminal recidivism prediction model, fair adversarial training can help mitigate the biased prediction rates for different racial groups.
 
@@ -237,37 +246,37 @@ These in-processing techniques are vital tools in promoting fairness within AI m
 Post-processing techniques are applied after the model has been trained and predictions have been generated. Their purpose is to rectify any biases or disparities in the model's outputs and ensure fairness in the final outcomes. Several techniques can be employed during post-processing to promote fairness:
 
 \subsubsection{Re-ranking or Re-scoring}
-This technique involves adjusting the ranking or scores assigned by the model to instances. The scores are modified based on fairness criteria, aiming to minimize any discriminatory impact on different demographic groups.
+Re-ranking or re-scoring is a technique used to adjust the order or scores of items or candidates generated by a machine learning model to promote fairness and reduce bias in the outcomes. This technique is often applied in various applications, including search engines, recommendation systems, and ranking algorithms, where the order of items or candidates matters and where bias or discrimination may be a concern.
 
 \textbf{Example:} In a college admissions system, the initial ranking of applicants can be adjusted to ensure a fair representation of students from diverse socioeconomic backgrounds.
 
 \subsubsection{Threshold Adjustments}
-Threshold adjustments involve modifying the decision thresholds of the model based on fairness considerations. By setting different decision thresholds for various demographic groups, we can balance false positives and false negatives across these groups.
+Threshold adjustment is a technique used to promote equity and reduce bias in machine learning models, especially in scenarios where sensitive attributes like race, gender, or age play a significant role. It involves modifying the decision threshold that determines whether a model's output is classified as a positive or negative prediction. This adjustment aims to balance the rates of false positives and false negatives across different demographic or group categories, ensuring that all groups are treated more fairly.
 
 \textbf{Example:} In a predictive policing model, different arrest thresholds can be applied to balance false arrest rates between different neighborhoods, ensuring fair law enforcement practices.
 
 \subsubsection{Additive Counterfactuals}
-This technique generates counterfactuals or alternative outcomes by modifying the model's predictions while keeping the sensitive attributes fixed. It aims to provide individuals with insights into how they might have been treated in a fairer system.
+Additive counterfactual explanations in the context of fairness refer to a method used to assess and promote fairness in machine learning models. Counterfactual explanations are designed to provide insights into the impact of sensitive attributes on model predictions and help identify potential bias or discrimination. The "additive" aspect suggests that changes are made to the original input to create counterfactual scenarios, allowing for a better understanding of the fairness implications.
 
 \textbf{Example:} In a loan approval system, generating counterfactuals can show rejected applicants how their outcomes would have differed with a fairer decision-making process.
 
 \subsubsection{Equalized Odds Post-processing}
-Equalized odds post-processing adjusts the predicted probabilities for each group to ensure that the false positive and false negative rates are equal across different demographic categories. This promotes fairness in the allocation of benefits or opportunities.
+Equalized Odds Post-processing is a technique used to mitigate bias and promote equal treatment in machine learning models, particularly in scenarios involving binary classification tasks. This technique is applied after a model has made predictions and aims to adjust those predictions to ensure that equal error rates are achieved across different demographic or group categories.
 
 \textbf{Example:} In a job application screening model, the predicted probabilities of being shortlisted can be equalized for candidates from different age groups to minimize age-based discrimination.
 
 \subsubsection{Reject Option Classification}
-This technique involves adding a "reject" category to the model's output, providing an alternative for cases where the model's predictions may be biased. The reject option aims to ensure fairness by withholding potentially biased predictions.
+Reject Option Classification (ROC) is a technique used to address potential bias and promote equitable outcomes in machine learning models, particularly in classification tasks. ROC introduces an additional class, the "reject" class, to allow for more nuanced and fair decision-making, especially when sensitive attributes like race, gender, or ethnicity are involved.
 
 \textbf{Example:} In a credit scoring model, if the prediction is close to the approval threshold, the model may opt for rejection to prevent biased decisions.
 
 \subsubsection{Oversampling for Minority Groups}
-In this technique, the predictions for the minority group are oversampled to balance the representation of outcomes, aiming to reduce biases and ensure fair treatment.
+Oversampling for minority groups is a data preprocessing technique used to address the issue of imbalanced datasets, particularly when sensitive attributes like race, gender, or ethnicity play a role. The goal of this technique is to ensure that minority groups are adequately represented in the training data, reducing bias and promoting fair and equitable outcomes in machine learning models.
 
 \textbf{Example:} In a medical diagnosis model, oversampling predictions for rare diseases ensures that the model is equally proficient in predicting both common and rare conditions.
 
 \subsubsection{Confidence Calibration}
-Confidence calibration adjusts the predicted probabilities to align with the actual probabilities of the predicted outcomes. This helps in reducing overconfidence or underconfidence in the model's predictions.
+Confidence calibration is a technique used to address bias and promote equitable outcomes in machine learning models, particularly in scenarios where sensitive attributes like race, gender, or age may lead to disparities in predictions. Confidence calibration involves adjusting the level of confidence or certainty associated with model predictions to achieve fairness objectives.
 
 \textbf{Example:} In a fraud detection system, confidence calibration ensures that the predicted fraud probabilities accurately reflect the actual likelihood of fraud, promoting fair treatment of all cases.
 
