doc: fixed introduction

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -74,7 +74,7 @@ Never too far down, to come back
 \mainmatter
 
 %----------------------------------------------------------------------------------------
-\chapter{\introductionname}
+\chapter{Introduction}
 \label{chap:introduction}
 %----------------------------------------------------------------------------------------
 
