--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -1118,7 +1118,7 @@ In the following are reported the results for each grade. More specifically for 
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
-\chapter{\conclusionsname}
+\chapter{Conclusion}
 \label{chap:conclusions}
 %----------------------------------------------------------------------------------------
 
