doc: abstract refactored

--- a/thesis-main.tex
+++ b/thesis-main.tex
@@ -38,6 +38,7 @@
 % Definition of acronyms
 \acrodef{IoT}{Internet of Thing}
 \acrodef{vm}[VM]{Virtual Machine}
+\acrodef{AI}{Artificial Intelligence}
 
 
 \mainlinespacing{1.241} % line spacing in mainmatter, comment to default (1)
@@ -48,16 +49,12 @@
 
 \input{front.tex}
 
-\begin{abstract}	
-Nowdays a lot of companies and social entities are wondering about the implications of Artificial Intelligence usages in the daily life of people, with a 
-huge interests for the implications in discriminations that may occour using these systems. \\
-A lot of methodologies in several fields like computer science, statistics and social sciences have been formalized in order to 
-afford the problem of the fairness in social systems and this problem is being dealt with during the development of the modern AI systems. \\
-In this work we propose several methods that have been developed considering fairness from the design phase, that's why they are called \emph{fair-by-design-method}
-In order to develop these methods we used well-known Python libraries such as \emph{Pandas}, \emph{Sci-kit-learn} and other libraries implemented by ourselves.
-We begun our work with mitigation techniques in fairness, also known as pre-processing techniques.
-Our work has been evaluated exploiting a real-world dataset on the education on Canary Island. So we compared the results of the prediction of a certain result for students applying fair-by-design methods and 
-the prediction obtained without consider fairness.
+\begin{abstract}
+    In light of growing AI adoption, concerns about potential discrimination have emerged. This study introduces a set of "fair-by-design" methodologies, which systematically embed fairness principles into AI systems. These techniques, primarily relying on established Python libraries and customized toolsets, focus on mitigating bias in AI predictions.
+    
+    The research commenced with an exploration of pre-processing fairness techniques. To evaluate their efficacy, we employed a real-world education dataset from the Canary Islands. Comparative analysis was conducted between predictions generated using fair-by-design methods and those produced without fairness considerations. The results highlight the substantial impact of proactive fairness integration in system design.
+    
+    Amid broader discussions concerning the ethical implications of AI, these fair-by-design methods offer a dispassionate approach to promoting equitable AI system performance, minimizing bias, and fostering responsible AI use.
 \end{abstract}
 
 
